# nextdb

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.codebase-memory/: artifact.json  graph.db.zst
crates/nextdb-behavior-sdk/: Cargo.toml
crates/nextdb-behavior-sdk/src/: lib.rs
crates/nextdb-server/: Cargo.toml
crates/nextdb-server/benches/: baseline.rs
crates/nextdb-server/src/: actor.rs  aggregate.rs  behavior.rs  cache_control.rs  chat_log.rs  cluster.rs  config.rs  connection.rs  live_query.rs  main.rs  model.rs  object_refs.rs  object_store.rs  realtime.rs  realtime_fanout.rs  record_hot.rs  record_projection.rs  record_store.rs  schema.rs  snapshot.rs  sync_tests.rs  tasks.rs  util.rs  wal.rs
crates/nextdb-server/src/api/: audit.rs  auth.rs  backup.rs  behavior.rs  cache.rs  connections.rs  error.rs  events.rs  frames.rs  guards.rs  mod.rs  mutation.rs  objects.rs  realtime.rs  records.rs  runtime.rs  schema.rs  status.rs  sync.rs  topology.rs  users.rs  wal.rs
docs/: ARCHITECTURE.md  DESIGN.md  IMPLEMENTATION_PLAN.md  PROTOTYPE_ACCEPTANCE.md  STABLE_CONTRACTS.md
handoff/nextdb-chatgpt-handoff-2026-07-07/: CODE_POINTERS.md  NEXT_WORK_PLAN.md  PROGRESS_AND_VALIDATION.md  PROJECT_BRIEF.md  README.md  WEB_CHATGPT_PROMPT.md
scripts/: admin-ui-smoke.mjs  benchmark-local.mjs  cluster-feature-gate-smoke.mjs  completion-audit.mjs  flamegraph-local.mjs  full-smoke.mjs  kill9-strict-durability.mjs  package-release.mjs  panic-hygiene.mjs  prototype-smoke.mjs  release-artifact-verify.mjs  release-smoke.mjs  soak-local.mjs
(+8 files in other folders)
