[package]
name = "nextdb-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
cluster = []

[dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bytes = "1.12"
crc32c = "0.6"
core_affinity = "0.8"
futures-util = "0.3"
fjall = "3.1.5"
postcard = { version = "1.1", features = ["alloc"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v7"] }
wasmtime = "46.0.1"
zstd = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
wat = "1.0"

[[bench]]
name = "baseline"
harness = false
